--- a/package.json
+++ b/package.json
@@ -1,28 +1,27 @@
 {
-  "//1": "describes your app and its dependencies",
-  "//2": "https://docs.npmjs.com/files/package.json",
-  "//3": "updating this file will download and update your packages",
-
-  "name": "Timestamp Microservice",
+  "name": "timestamp-service",
   "version": "0.0.1",
-  "description": "Tells you time, if you ask, in both unix and natural form",
+  "description": "A timestamp API that allow for conversion between a few time format",
   "main": "server.js",
   "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
-  "dependencies": {
-    "express": "^4.15.3"
-  },
-  "engines": {
-    "node": "8.1.x"
-  },
   "repository": {
-    "url": "https://glitch.com/edit/#!/welcome-project"
+    "type": "git",
+    "url": "git+https://github.com/vrizaldi/timestamp.git"
   },
-  "license": "MIT",
   "keywords": [
-    "node",
-    "glitch",
-    "express"
-  ]
+    "timestamp",
+    "api"
+  ],
+  "author": "vrizaldi",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/vrizaldi/timestamp/issues"
+  },
+  "homepage": "https://github.com/vrizaldi/timestamp#readme",
+  "dependencies": {
+    "express": "^4.14.0"
+  }
 }
