--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "url": "https://github.com/vrizaldi/timestamp/issues"
   },
   "homepage": "https://github.com/vrizaldi/timestamp#readme",
-  "dependencies": {},
+  "dependencies": {
+	"express": "^4.14.0"
+  },
   "devDependencies": {}
 }
