--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/vrizaldi/timestamp#readme",
   "dependencies": {
-    "express": "^4.14.0"
-  }
+	"express": "^4.14.0"
+  },
+  "devDependencies": {}
 }
